# oshino-admin

./: LICENSE  README.md  pyproject.toml  setup.py
oshino_admin/: daemon.py  run.py  util.py  version.py
package_manager/: plugins.txt
requirements/: release.txt  test.txt
tests/: test_utils.py
